gcc/testsuite/gcc.target/i386/pr30848.c
/* { dg-do compile } */

void foo(double d)
{
  __asm__ ("" : "=u" (d));  /* { dg-error "output registers" } */
}
